--- a/wasm_demo.yaml
+++ b/wasm_demo.yaml
@@ -2,8 +2,8 @@ specVersion: 0.1.0
 description: Demo WASM substreams
 
 protoFiles:
-  - /Users/eduardvoiculescu/git/streamingFast/substreams-template/proto/erc20.proto
-  - /Users/eduardvoiculescu/git/streamingFast/substreams-template/proto/codec_eth.proto
+  - ./proto/erc20.proto
+  - ./proto/codec_eth.proto
 
 modules:
   - name: block_to_hello_world
