--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,14 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2.79"
 prost = { version = "0.10.1" }
 prost-types = "0.10.1"
-substreams={ git = "https://github.com/streamingfast/substreams", module="rust/substreams", branch="develop" }
+substreams={ git = "https://github.com/streamingfast/substreams", branch="develop" }
 hex = "0.4.3"
 num-bigint = "0.4"
 
 [build-dependencies]
 prost-build = "0.10.1"
+
+[profile.release]
+lto = true
+opt-level = 's'
+strip = "debuginfo"
