--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ wasm-bindgen = "0.2.79"
 prost = { version = "0.10.1" }
 prost-types = "0.10.1"
 substreams= { git = "https://github.com/streamingfast/substreams", branch="develop" }
-hex = "0.4.3"
+hex-literal = "0.3.4"
 num-bigint = "0.4"
 
 [build-dependencies]
