--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,19 @@ repository = "https://github.com/streamingfast/substreams-template"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.79"
-prost = { version = "0.10.1" }
-prost-types = "0.10.1"
-substreams= { git = "https://github.com/streamingfast/substreams", branch="develop" }
+ethabi = "17.0"
 hex-literal = "0.3.4"
-num-bigint = "0.4"
+prost = { version = "0.10.1" }
+substreams= { git = "https://github.com/streamingfast/substreams", branch="develop" }
+substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }
+
+# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
+getrandom = { version = "0.2", features = ["custom"] }
+
 
 [build-dependencies]
-prost-build = "0.10.1"
+anyhow = "1"
+substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }
 
 [profile.release]
 lto = true
