--- a/substreams.yaml
+++ b/substreams.yaml
@@ -1,18 +1,14 @@
 specVersion: v0.1.0
 package:
-  name: template
-  version: v0.5.0
-  url: https://github.com/streamingfast/substreams-template
-  doc: |
-    These substream modules compose all the things to build up the PancakeSwap substreams.
-    See individual modules docs for help.
+  name: "substreams_template"
+  version: v0.1.0
+
+imports:
+  eth: https://github.com/streamingfast/sf-ethereum/releases/download/v0.10.2/ethereum-v0.10.4.spkg
 
 protobuf:
   files:
-    - contract.proto
-    - counter.proto
-    - ethereum.proto
-    - erc20.proto
+    - erc721.proto
   importPaths:
     - ./proto
 
@@ -22,46 +18,18 @@ binaries:
     file: ./target/wasm32-unknown-unknown/release/substreams_template.wasm
 
 modules:
-  - name: map_hello_world
+  - name: block_to_transfers
     kind: map
-    initialBlock: 14440000
+    initialBlock: 12287507
     inputs:
       - source: sf.ethereum.type.v1.Block
     output:
-      type: proto:sf.ethereum.type.v1.TransactionTrace
+      type: proto:eth.erc721.v1.Transfers
 
-  - name: map_erc20_transfers
-    kind: map
-    initialBlock: 14440000
-    inputs:
-      - source: sf.ethereum.type.v1.Block
-    output:
-      type: proto:eth.erc20.v1.Transfers
-
-  - name: store_erc20_transfers
+  - name: nft_state
     kind: store
-    initialBlock: 14440000
-    updatePolicy: set
-    valueType: bytes
-    code:
-      type: wasm/rust-v1
-      file: ./target/wasm32-unknown-unknown/release/substreams_template.wasm
-      entrypoint: build_erc_20_transfer_state
+    initialBlock: 12287507
+    updatePolicy: add
+    valueType: int64
     inputs:
-      - map: map_erc20_transfers
-
-  - name: count_erc20_transfers
-    kind: map
-    initialBlock: 14440000
-    inputs:
-      - map: map_erc20_transfers
-    output:
-      type: proto:eth.counter.v1.Counter
-
-  - name: map_contract_creation
-    kind: map
-    initialBlock: 14440000
-    inputs:
-      - source: sf.ethereum.type.v1.Block
-    output:
-      type: proto:eth.contract.v1.Contracts
+      - map: block_to_transfers
