--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,19 @@ repository = "https://github.com/streamingfast/substreams-template"
 [lib]
 crate-type = ["cdylib"]
 
-[dependencies]
+[target.wasm32-unknown-unknown.dependencies]
 ethabi = "17.0"
 hex-literal = "0.3.4"
 prost = "0.10.1"
 substreams = "0.0.8-beta"
-substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }
+substreams-ethereum = "0.1.0"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 getrandom = { version = "0.2", features = ["custom"] }
 
 [build-dependencies]
 anyhow = "1"
-substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }
+substreams-ethereum = "0.1.0"
 
 [profile.release]
 lto = true
