--- a/substreams.yaml
+++ b/substreams.yaml
@@ -18,7 +18,7 @@ binaries:
     file: ./target/wasm32-unknown-unknown/release/substreams_template.wasm
 
 modules:
-  - name: block_to_transfers
+  - name: map_transfers
     kind: map
     initialBlock: 12287507
     inputs:
@@ -26,10 +26,10 @@ modules:
     output:
       type: proto:eth.erc721.v1.Transfers
 
-  - name: nft_state
+  - name: store_transfers
     kind: store
     initialBlock: 12287507
     updatePolicy: add
     valueType: int64
     inputs:
-      - map: block_to_transfers
+      - map: map_transfers
