git pod SUBSTREAMS_API_TOKEN validation

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,5 @@
 tasks:
   - before: |
-      if [[ "$STREAMINGFAST_KEY" == "" ]]; then
-        echo "ERROR: you need to set the STREAMINGFAST_KEY environment variable in your gitpod settings. Get yourself a key from here: https://app.dfuse.io/"
-        exit 1
-      fi
-
       # Install the buf cli
       wget https://github.com/bufbuild/buf/releases/download/v1.4.0/buf-Linux-x86_64
       sudo mv buf-Linux-x86_64 /usr/local/bin/buf && sudo chmod +x /usr/local/bin/buf
@@ -19,4 +14,10 @@ tasks:
       # Authenticate with the substreams server
       export SUBSTREAMS_API_TOKEN=$(curl https://auth.dfuse.io/v1/auth/issue -s --data-binary '{"api_key":"'$STREAMINGFAST_KEY'"}' | jq -r .token)
     init: |
-      cargo build --target wasm32-unknown-unknown --release
+        if [[ "$STREAMINGFAST_KEY" == "" ]]; then
+            echo "***************************************************************************"
+            echo "ERROR: you need to set the STREAMINGFAST_KEY environment variable in your gitpod settings. Get yourself a key from here: https://app.dfuse.io/"
+            echo "***************************************************************************"
+            exit 1
+        fi        
+        cargo build --target wasm32-unknown-unknown --release
