--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,8 +6,8 @@ tasks:
         echo "***************************************************************************"            
       fi        
         
-      if [[ "$STREAMINGFAST_KEY" != "" ]]; then
-          # Install the buf cli
+      if [[ -n "$STREAMINGFAST_KEY" ]]; then
+        # Install the buf cli
         wget https://github.com/bufbuild/buf/releases/download/v1.4.0/buf-Linux-x86_64
         sudo mv buf-Linux-x86_64 /usr/local/bin/buf && sudo chmod +x /usr/local/bin/buf
 
