--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,4 +22,6 @@ tasks:
         export SUBSTREAMS_API_TOKEN=$(curl https://auth.dfuse.io/v1/auth/issue -s --data-binary '{"api_key":"'$STREAMINGFAST_KEY'"}' | jq -r .token)
       fi
     init: |
+      if [[ -n "$STREAMINGFAST_KEY" ]]; then
         cargo build --target wasm32-unknown-unknown --release
+      fi
