Fix Dockerfile filename and plug image into Gitpod

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,4 @@
-image:
-  file: .gitpod.Dockerfile
+image: streamingfast/substreams-gitpod
 tasks:
   - before: |
       # Authenticate with the substreams server
