Build Gitpod Docker image from the develop branch

--- a/.github/workflows/gitpod-docker.yml
+++ b/.github/workflows/gitpod-docker.yml
@@ -5,8 +5,7 @@ on:
     tags:
       - "v*"
     branches:
-      - "main"
-      - "jannis/gitpod-docker-image"
+      - "develop"
 
 jobs:
   docker:
