--- a/Dockerfile.gitpod
+++ b/Dockerfile.gitpod
@@ -8,7 +8,7 @@ RUN sudo mv buf-Linux-x86_64 /usr/local/bin/buf && sudo chmod +x /usr/local/bin/
 RUN wget -c https://github.com/streamingfast/substreams/releases/download/v0.0.13/substreams_0.0.13_linux_x86_64.tar.gz -O - | tar xzf - substreams
 RUN sudo mv substreams /usr/local/bin/substreams
 
-RUN rustup update stable
-
 # Install protoc-gen-prost
 RUN cargo install protoc-gen-prost
+
+ENTRYPOINT ["/bin/bash"]
