--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ prost = "0.10.1"
 substreams = "0.0.11"
 # Use latest from https://crates.io/crates/substreams-ethereum
 substreams-ethereum = "0.1.2"
+num-bigint = "0.4.3"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
