--- a/substreams.yaml
+++ b/substreams.yaml
@@ -9,6 +9,7 @@ imports:
 protobuf:
   files:
     - erc721.proto
+    - database.proto
   importPaths:
     - ./proto
 
@@ -33,3 +34,13 @@ modules:
     valueType: int64
     inputs:
       - map: map_transfers
+
+  - name: graph_entities
+    kind: map
+    initialBlock: 12287507
+    inputs:
+      - source: sf.substreams.v1.Clock
+      - store: store_transfers
+        mode: deltas
+    output:
+      type: proto:eth.database.v1.EntitiesChanges
