--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ crate-type = ["cdylib"]
 [dependencies]
 ethabi = "17.0"
 hex-literal = "0.3.4"
-prost = "0.10.1"
+prost = "^0.11.0"
 # Use latest from https://crates.io/crates/substreams
-substreams = "0.0.11"
+substreams = "~0.0.19"
 # Use latest from https://crates.io/crates/substreams-ethereum
-substreams-ethereum = "0.1.3"
+substreams-ethereum = "~0.2.0"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
@@ -23,7 +23,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 
 [build-dependencies]
 anyhow = "1"
-substreams-ethereum = "0.1.3"
+substreams-ethereum = "~0.2.0"
 
 [profile.release]
 lto = true
