--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ ethabi = "17.0"
 hex-literal = "0.3.4"
 prost = "^0.11.0"
 # Use latest from https://crates.io/crates/substreams
-substreams = "~0.0.20"
+substreams = "0.3.0"
 # Use latest from https://crates.io/crates/substreams-ethereum
-substreams-ethereum = "~0.2.0"
+substreams-ethereum = "0.6.0"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
@@ -23,7 +23,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 
 [build-dependencies]
 anyhow = "1"
-substreams-ethereum = "~0.2.0"
+substreams-ethereum = "0.6.0"
 
 [profile.release]
 lto = true
