Updated to latest versions of `substreams-rs`, `substreams-ethereum` plus more Makefile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ name = "substreams"
 crate-type = ["cdylib"]
 
 [dependencies]
-ethabi = "17.0"
+ethabi = "17"
 hex-literal = "0.3.4"
-prost = "^0.11.0"
+prost = "0.11"
 # Use latest from https://crates.io/crates/substreams
-substreams = "0.3.2"
+substreams = "0.4"
 # Use latest from https://crates.io/crates/substreams-ethereum
-substreams-ethereum = "0.6.2"
+substreams-ethereum = "0.7"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
@@ -24,7 +24,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 
 [build-dependencies]
 anyhow = "1"
-substreams-ethereum = "0.6.2"
+substreams-ethereum = "0.7"
 
 [profile.release]
 lto = true
