Added license in `Cargo.toml` and introduced some variable in Makefile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Substream template demo project"
 edition = "2021"
 repository = "https://github.com/streamingfast/substreams-template"
+license = "Apache 2.0"
 
 [lib]
 name = "substreams"
