--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,14 @@ name = "substreams"
 crate-type = ["cdylib"]
 
 [dependencies]
+num-bigint = "0.4.3"
 ethabi = "17"
 hex-literal = "0.3.4"
 prost = "0.11"
 # Use latest from https://crates.io/crates/substreams
 substreams = "0.5"
 # Use latest from https://crates.io/crates/substreams-ethereum
-substreams-ethereum = "0.8"
+substreams-ethereum = "0.9.0"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
@@ -25,7 +26,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 
 [build-dependencies]
 anyhow = "1"
-substreams-ethereum = "0.8"
+substreams-ethereum = "0.9.0"
 
 [profile.release]
 lto = true
