--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,15 @@ name = "substreams"
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1"
 ethabi = "17"
 hex-literal = "0.3"
 num-bigint = "0.4"
 prost = "0.11"
 # Use latest from https://crates.io/crates/substreams
 substreams = "0.5"
+# Use latest from https://crates.io/crates/substreams-database-change
+substreams-database-change = "1.2"
 # Use latest from https://crates.io/crates/substreams-ethereum
 substreams-ethereum = "0.9"
 
